--- a/microservices/user_svc/package.json
+++ b/microservices/user_svc/package.json
@@ -17,17 +17,15 @@
     "url": "https://gitlab.com/i3615/it-smile-node-app/issues"
   },
   "homepage": "https://gitlab.com/i3615/it-smile-node-app#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  },
   "dependencies": {
     "apollo-server": "^3.9.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
     "sequelize": "^6.21.0",
     "sequelize-cli": "^6.4.1"
   }
