--- a/microservices/user_svc/package.json
+++ b/microservices/user_svc/package.json
@@ -21,6 +21,7 @@
     "apollo-server": "^3.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
