--- a/microservices/user_svc/database/config/config.json
+++ b/microservices/user_svc/database/config/config.json
@@ -5,7 +5,7 @@
     "database": "smile",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "logging": true
+    "logging": false
   },
   "test": {
     "username": "root",
