--- a/microservices/quiz_svc/database/config/config.json
+++ b/microservices/quiz_svc/database/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "quize_svc",
+    "database": "quiz_svc",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
