--- a/gateway/package.json
+++ b/gateway/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "graphql-upload": "^15.0.2"
   }
 }
