--- a/microservices/user_svc/package.json
+++ b/microservices/user_svc/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://gitlab.com/i3615/it-smile-node-app#readme",
   "dependencies": {
-    "apollo-server": "^3.9.0",
+    "apollo-server-express": "^3.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-upload": "^15.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
