--- a/microservices/quiz_svc/package.json
+++ b/microservices/quiz_svc/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
