link microservices with gateway

--- a/gateway/.env
+++ b/gateway/.env
@@ -3,3 +3,9 @@ PORT=8080
 PROTOCOL=http
 
 HOSTNAME=localhost
+
+QUIZ_URL='http://localhost:6000/'
+
+AUTH_URL='http://localhost:5000/'
+
+USER_URL='http://localhost:3000/graphql/'
