--- a/gateway/package.json
+++ b/gateway/package.json
@@ -7,7 +7,7 @@
     "dropDB": "cd .. && cd microservices && cd user_svc && cd database && npx sequelize-cli db:drop && cd .. && cd .. && cd auth_svc && cd database && npx sequelize-cli db:drop && cd .. && cd .. && cd quiz_svc && cd database && npx sequelize-cli db:drop && cd .. && cd ..",
     "createDB": "cd .. && cd microservices && cd user_svc && cd database && npx sequelize-cli db:create && cd .. && cd .. && cd auth_svc && cd database && npx sequelize-cli db:create && cd .. && cd .. && cd quiz_svc && cd database && npx sequelize-cli db:create && cd .. && cd ..",
     "migrateDB": "cd .. && cd microservices && cd user_svc && cd database && npx sequelize-cli db:migrate && cd .. && cd .. && cd auth_svc && cd database && npx sequelize-cli db:migrate && cd .. && cd .. && cd quiz_svc && cd database && npx sequelize-cli db:migrate && cd .. && cd ..",
-    "seedDB": "cd .. && cd microservices && cd auth_svc && cd database && npx sequelize-cli db:seed:all",
+    "seedDB": "cd .. && cd microservices && cd user_svc && cd database && npx sequelize-cli db:seed:all && cd .. && cd .. && cd auth_svc && cd database && npx sequelize-cli db:seed:all && cd .. && cd .. && cd quiz_svc && cd database && npx sequelize-cli db:seed:all && cd .. && cd ..",
     "start_user_svc": "cd .. && cd microservices && cd user_svc && npm start",
     "start_auth_svc": "cd .. && cd microservices && cd auth_svc && npm start",
     "start_quiz_svc": "cd .. && cd microservices && cd quiz_svc && npm start",
