--- a/microservices/lecture_svc/package.json
+++ b/microservices/lecture_svc/package.json
@@ -9,7 +9,15 @@
   "author": "ismail & loubna",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.10.0",
     "dotenv": "^16.0.1",
-    "nodemon": "^2.0.19"
+    "express": "^4.18.1",
+    "graphql": "^16.5.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
