--- a/gateway/package.json
+++ b/gateway/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
-    "graphql-upload": "^15.0.2"
+    "graphql-upload": "^15.0.2",
+    "node-schedule": "^2.1.0"
   }
 }
