--- a/gateway/.env
+++ b/gateway/.env
@@ -9,3 +9,5 @@ QUIZ_URL='http://localhost:6000/'
 AUTH_URL='http://localhost:5000/'
 
 USER_URL='http://localhost:3000/graphql/'
+
+LECTURE_URL='http://localhost:7000/graphql/'
