--- a/microservices/lecture_svc/.env
+++ b/microservices/lecture_svc/.env
@@ -3,3 +3,5 @@ PORT=7000
 PROTOCOL=http
 
 HOSTNAME=localhost
+
+JWT_SECRET='jqog;;x@CqDp>w8gtd8vS2heMm_66v?Ki%VZqI_pEunkS6njhgfdtresxdfgth4532456yujeynrbvfcfd26gvm/rF9.GdAgmzr'
