--- a/microservices/lecture_svc/package.json
+++ b/microservices/lecture_svc/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-upload": "^15.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.3"
