--- a/microservices/quiz_svc/database/config/config.json
+++ b/microservices/quiz_svc/database/config/config.json
@@ -10,14 +10,14 @@
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "quiz_svc",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "quiz_svc",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
