--- a/gateway/.env
+++ b/gateway/.env
@@ -11,3 +11,5 @@ AUTH_URL='http://localhost:5000/'
 USER_URL='http://localhost:3000/graphql/'
 
 LECTURE_URL='http://localhost:7000/graphql/'
+
+MARKS_URL='http://localhost:8000/graphql/'
