--- a/microservices/marks_svc/package.json
+++ b/microservices/marks_svc/package.json
@@ -9,7 +9,7 @@
   "author": "loubna & ismail",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.10.0",
+    "apollo-server": "^3.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
