change to apollo-server-express | fix getUploadPath

--- a/gateway/.env
+++ b/gateway/.env
@@ -4,9 +4,9 @@ PROTOCOL=http
 
 HOSTNAME=localhost
 
-QUIZ_URL='http://localhost:6000/'
+QUIZ_URL='http://localhost:6000/graphql/'
 
-AUTH_URL='http://localhost:5000/'
+AUTH_URL='http://localhost:5000/graphql/'
 
 USER_URL='http://localhost:3000/graphql/'
 
