--- a/microservices/marks_svc/package.json
+++ b/microservices/marks_svc/package.json
@@ -9,13 +9,16 @@
   "author": "loubna & ismail",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
