--- a/microservices/quiz_svc/package.json
+++ b/microservices/quiz_svc/package.json
@@ -9,10 +9,11 @@
   "author": "Ismail & Loubna",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1"
