--- a/microservices/user_svc/package.json
+++ b/microservices/user_svc/package.json
@@ -21,15 +21,15 @@
   "dependencies": {
     "apollo-server-express": "^3.10.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
-    "graphql-upload": "^15.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.16",
     "sequelize": "^6.21.0",
     "sequelize-cli": "^6.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
