--- a/gateway/.env
+++ b/gateway/.env
@@ -4,6 +4,8 @@ PROTOCOL=http
 
 HOSTNAME=localhost
 
+JWT_SECRET='jqog;;x@CqDp>w8gtd8vS2heMm_66v?Ki%VZqI_pEunkS6njhgfdtresxdfgth4532456yujeynrbvfcfd26gvm/rF9.GdAgmzr'
+
 QUIZ_URL='http://localhost:6000/graphql/'
 
 AUTH_URL='http://localhost:5000/graphql/'
