--- a/gateway/package.json
+++ b/gateway/package.json
@@ -28,6 +28,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-upload": "^15.0.2",
+    "jsonwebtoken": "^8.5.1",
     "node-schedule": "^2.1.0"
   }
 }
